drivers/c/novusdb.h

/* Code generated by cmd/cgo; DO NOT EDIT. */

/* package github.com/Felmond13/novusdb/drivers/c */


#line 1 "cgo-builtin-export-prolog"

#include <stddef.h>

#ifndef GO_CGO_EXPORT_PROLOGUE_H
#define GO_CGO_EXPORT_PROLOGUE_H

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef struct { const char *p; ptrdiff_t n; } _GoString_;
extern size_t _GoStringLen(_GoString_ s);
extern const char *_GoStringPtr(_GoString_ s);
#endif

#endif

/* Start of preamble from import "C" comments.  */


#line 3 "novusdb.go"

#include <stdlib.h>

#line 1 "cgo-generated-wrapper"


/* End of preamble from import "C" comments.  */


/* Start of boilerplate cgo prologue.  */
#line 1 "cgo-gcc-export-header-prolog"

#ifndef GO_CGO_PROLOGUE_H
#define GO_CGO_PROLOGUE_H

typedef signed char GoInt8;
typedef unsigned char GoUint8;
typedef short GoInt16;
typedef unsigned short GoUint16;
typedef int GoInt32;
typedef unsigned int GoUint32;
typedef long long GoInt64;
typedef unsigned long long GoUint64;
typedef GoInt64 GoInt;
typedef GoUint64 GoUint;
typedef size_t GoUintptr;
typedef float GoFloat32;
typedef double GoFloat64;
#ifdef _MSC_VER
#if !defined(__cplusplus) || _MSVC_LANG <= 201402L
#include <complex.h>
typedef _Fcomplex GoComplex64;
typedef _Dcomplex GoComplex128;
#else
#include <complex>
typedef std::complex<float> GoComplex64;
typedef std::complex<double> GoComplex128;
#endif
#else
typedef float _Complex GoComplex64;
typedef double _Complex GoComplex128;
#endif

/*
  static assertion to make sure the file is being used on architecture
  at least with matching size of GoInt.
*/
typedef char _check_for_64_bit_pointer_matching_GoInt[sizeof(void*)==64/8 ? 1:-1];

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef _GoString_ GoString;
#endif
typedef void *GoMap;
typedef void *GoChan;
typedef struct { void *t; void *v; } GoInterface;
typedef struct { void *data; GoInt len; GoInt cap; } GoSlice;

#endif

/* End of boilerplate cgo prologue.  */

#ifdef __cplusplus
extern "C" {
#endif


// NovusDB_open ouvre une base NovusDB.
// Retourne un handle > 0 en cas de succès, 0 en cas d'erreur.
//
extern __declspec(dllexport) long long int NovusDB_open(char* path);

// NovusDB_close ferme une connexion.
// Retourne 0 en cas de succès, -1 en cas d'erreur.
//
extern __declspec(dllexport) int NovusDB_close(long long int handle);

// NovusDB_exec exécute une requête SQL.
// Retourne un JSON alloué en C (à libérer avec NovusDB_free).
// Format : {"docs":[...], "rows_affected":N, "last_insert_id":N}
// En cas d'erreur : {"error":"..."}
//
extern __declspec(dllexport) char* NovusDB_exec(long long int handle, char* sql);

// NovusDB_insert_json insère un document JSON brut dans une collection.
// Retourne l'ID du document inséré, ou -1 en cas d'erreur.
//
extern __declspec(dllexport) long long int NovusDB_insert_json(long long int handle, char* collection, char* jsonStr);

// NovusDB_collections retourne la liste des collections en JSON.
// À libérer avec NovusDB_free.
//
extern __declspec(dllexport) char* NovusDB_collections(long long int handle);

// NovusDB_error retourne la dernière erreur pour un handle.
// À libérer avec NovusDB_free.
//
extern __declspec(dllexport) char* NovusDB_error(long long int handle);

// NovusDB_dump retourne le dump SQL complet.
// À libérer avec NovusDB_free.
//
extern __declspec(dllexport) char* NovusDB_dump(long long int handle);

// NovusDB_free libère une chaîne allouée par les fonctions NovusDB_*.
//
extern __declspec(dllexport) void NovusDB_free(char* ptr);

#ifdef __cplusplus
}
#endif